--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -191,12 +191,12 @@
 <div class="container-fluid">
   <div class="row">
     <div class="hero-section ">
-       <div class="content col-xxl-7 col-xl-7 col-lg-7 col-md-12 col-sm-12">
+      <div class="content col-xxl-7 col-xl-7 col-lg-7 col-md-12 col-sm-12">
         <h1 class="">Website Builder</h1>
         <p class="my-4">Create a beautiful website in seconds</p>
         <div class="input-container w-75 mt-0 mb-3 d-flex flex-column flex-sm-row gap-2">
           <input pInputText type="text" placeholder="Enter Your Business Name"
-            class="business-input fw-medium text-gray-100 p-3 w-100 w-sm-auto" />
+            class="business-input fw-medium text-gray-100 p-3 w-100" />
           <button pButton label="Start Now" class="start-btn btn btn-primary">Start Now</button>
         </div>
         <div class="">
@@ -204,12 +204,12 @@
               class="fa-solid fa-cloud-arrow-up"></i><a href="" class="text-white fw-bold text-decoration-none">Upload
               your logo</a></button>
         </div>
-      </div> 
+      </div>
 
 
 
 
-  
+
       <div class="preview-images col-xxl-5 col-xl-5 col-lg-5 col-md-6 col-sm-6">
         <img
           src="https://bcassetcdn.com/assets/images/designcom/hero-banner-background/hero-feature-website-builder@2x.webp"
@@ -220,14 +220,14 @@
 </div>
 
 <!-- cards -->
-
+<div class="container-fluid bg-light py-5">
 <div class="container mt-5">
   <h6 class="text-primary">DESIGN TEMPLATES</h6>
   <h1 class="fw-bold">
     Make a website you'll love, instantly.<br />Try it for free.
   </h1>
   <p class="text-muted">
-    Whether you're creating a website for your startup, a real estate business, or a gym, 
+    Whether you're creating a website for your startup, a real estate business, or a gym,
     we can help you generate a beautiful website in seconds.
   </p>
 
@@ -255,26 +255,222 @@
   <div class="text-start col-lg-8">
     <h6 class="text-primary fw-bold">HOW IT WORKS</h6>
     <h1 class="fw-bold">Crafting the perfect website is easy with <span class="text-dark">Design.com</span></h1>
-    <p class="text-secondary fw-medium mt-3 fs-6">In seconds you can create a professional website with our free website builder. Design.com's website builder is easy to use and allows you full customization to get the design you want!</p>
+    <p class="text-secondary fw-medium mt-3 fs-6">In seconds you can create a professional website with our free website
+      builder. Design.com's website builder is easy to use and allows you full customization to get the design you want!
+    </p>
   </div>
 
   <!-- Find a Website Template Section -->
   <div class="row align-items-center mt-5">
-    <div class="col-lg-6">
+    <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12">
       <h2 class="fw-bold">Find a website template</h2>
       <p class="text-muted card-1 mt-3">
-        To get started with our website builder, simply enter your business name and explore a wide array of beautifully designed website templates.
+        To get started with our website builder, simply enter your business name and explore a wide array of beautifully
+        designed website templates.
         Browse through high-quality options to find the ideal style for your online presence.
       </p>
       <button class="btn btn-primary px-4 py-3 fw-bold small">Find A Website</button>
     </div>
 
     <!-- Image Section -->
-    <div class="col-lg-6 text-end">
+    <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 text-end">
       <div class="">
-        <img src="https://bcassetcdn.com/assets/images/designcom/maker-home-v2/website-maker-1@2x.webp" class="img-fluid rounded" style="max-width: 450px;">
+        <img src="https://bcassetcdn.com/assets/images/designcom/maker-home-v2/website-maker-1@2x.webp"
+          class="img-fluid rounded">
       </div>
     </div>
   </div>
 </div>
+<div class="container mt-8">
+  <div class="row mt-8">
+    <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12">
+      <div>
+        <img src="https://bcassetcdn.com/assets/images/designcom/maker-home-v2/website-maker-2@2x.webp" alt=""
+          class="img-fluid rounded">
+      </div>
+    </div>
+    <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12">
+      <h2 class="fw-bold text-dark">Customize your website</h2>
+      <p class="text-muted card-2 mt-3 fw-medium fs-6">Once you've selected a template, personalizing it is effortless.
+        Change the colors, fonts, and layout with
+        just a few clicks. Move elements around, add icons, and adjust the text to reflect your brand. Enhance your
+        website with custom backgrounds, unique icons, and tailored content to create a distinctive and engaging
+        site.</p>
+      <div>
+        <button class="btn btn-primary p-3 px-3 fw-bold">Create My Website</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container mt-8">
+  <div class="row mt-8">
+    <div class="col-xxl-7 col-xl-7 col-lg-7 col-md-12 col-sm-12 mt-8">
+      <h2 class="fw-bold text-dark mt-5">Publish your website</h2>
+      <p class="text-muted card-2 mt-3 fw-medium fs-6 w-75">Creating your perfect website was easy, right? Now it's time
+        to
+        publish your creation. With just a click, you can instantly launch your site and start using it. Your customized
+        website is live, helping you connect with your audience effortlessly..</p>
+      <div>
+        <button class="btn btn-primary p-3 px-3 fw-bold">Browser Website Design</button>
+      </div>
+    </div>
+    <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12">
+      <div>
+        <img src="https://bcassetcdn.com/assets/images/designcom/maker-home-v2/website-maker-3@2x.webp" alt=""
+          class="img-fluid rounded">
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<div class="bg-dark">
+  <div class="container">
+    <div class="row">
+      <div class="text-center mt-5">
+        <h6 class="fw-bold text-primary">ADVANTAGES</h6>
+        <h1 class="text-white fw-bold mt-3">Not just a website maker</h1>
+      </div>
+      <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-8">
+        <div>
+          <img src="https://bcassetcdn.com/assets/images/designcom/features-v2/features-website-builder@2x.webp" alt=""
+            class="img-fluid rounded">
+        </div>
+      </div>
+      <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-8">
+        <div class="text-white mt-8">
+          <h2 class="fw-bold w-75">Tell your story with a personalized website</h2>
+          <p class="card-2 mt-4 fw-medium fs-6 text-white">Complete your brand identity with a personalized website
+            design. A great website helps you create a
+            recognizable brand and grow your network. Don't just inform people of who you are and how they can reach
+            you, but tell your story too - create a high-impact website using the Design.com website builder.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row mt-8">
+      <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 text-white mt-1">
+        <h2 class="fw-bold w-75">Create the perfect website</h2>
+        <p class="card-2 mt-4 fw-medium fs-6 text-white">Getting a stunning website that is easy to use doesn't have to be a pain. In fact, you can create the perfect
+          design in seconds. All you have to do is use the Design.com website maker to find the perfect design for your
+          business. You can then add a custom domain name, contact forms, online payments and more with a few clicks.
+        </p>
+      </div>
+      <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 text-white">
+        <h2 class="fw-bold w-75">Get more than just a website design</h2>
+        <p class="card-2 mt-4 fw-medium fs-6 text-white">Looking to complete your marketing collateral checklist? Design.com gives you more than just an awesome
+          website. With easy-to-use design tools, you can ensure your brand consistently looks its best across web,
+          social and print. Try our social media and print design tools today - you'll find everything you need to
+          launch your business at Design.com.</p>
+      </div>
+      <div class="d-flex justify-content-center align-items-center mt-5 mb-5">
+        <button class="btn btn-primary p-3 fw-bold">Create My Website</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<!-- testimonial -->
+<div class="container text-center my-5 testimonial-1 justify-content-center align-items-center">
+  <h6 class="text-primary text-uppercase mt-8 ">TESTIMONIALS</h6>
+  <h1 class="fw-bold mt-4">These businesses loved <br> Design.com</h1>
+
+  <p-carousel [value]="testimonials" [numVisible]="1" [numScroll]="1" [circular]="true" [autoplayInterval]="3000"
+      [showNavigators]="false" [showIndicators]="true" class="text-center">
+      <ng-template pTemplate="item" let-item>
+          <div class="testimonial-box mt-5">
+              <p class="text-muted px-4 testimonial-text">
+                  {{ item.text }}
+              </p>
+              <h6 class="fw-bold mt-3">{{ item.name }}</h6>
+              <div class="text-warning">
+                  <i class="pi pi-star" *ngFor="let star of item.stars"></i>
+                  ⭐⭐⭐⭐⭐
+              </div>
+          </div>
+      </ng-template>
+  </p-carousel>
+</div>
+<div class="container-fluid bg-light py-5">
+  <div class="container">
+    <h5 class="text-primary fw-bold">HOW TO</h5>
+    <h2 class="fw-bold mt-3 fs-1">How to build a website with <br> Design.com?</h2>
+    <p class="text-muted fs-6 fw-medium col-lg-8 mt-3">
+      Creating the perfect website is easy with Design.com. Follow these steps and you'll have a site
+      ready to share with the world in no time.
+    </p>
+
+    <div class="row mt-5">
+      <!-- Step 1 -->
+      <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 col-sm-12">
+        <div class="icon-circle">
+          <i class="fas fa-search bg-primary p-3 rounded-circle text-white fw-bold"></i>
+        </div>
+        <h5 class="fw-bold mt-3">Start searching</h5>
+        <p class="text-muted fs-6 fw-medium">
+          To find website templates related to your business enter your business name – we’ll instantly 
+          show you designs relevant to your business. You can browse the website designs and choose one you like.
+        </p>
+      </div>
+
+      <!-- Step 2 -->
+      <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 col-sm-12">
+        <div class="icon-circle">
+          <i class="fas fa-sliders-h bg-primary rounded-circle p-3 text-white fw-bold"></i>
+        </div>
+        <h5 class="fw-bold mt-3">Refine your search</h5>
+        <p class="text-muted fs-6 fw-medium">
+          Can't see a website design that stands out? No problem, you can adjust your search by entering 
+          related keywords to get more customized results.
+        </p>
+      </div>
+
+      <!-- Step 3 -->
+      <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 col-sm-12">
+        <div class="icon-circle">
+          <i class="fas fa-paint-brush bg-primary rounded-circle p-3 text-white fw-bold"></i>
+        </div>
+        <h5 class="fw-bold mt-3">Edit your website</h5>
+        <p class="text-muted fs-6 fw-medium">
+          Once you’ve found a website design you love, you can customize the colors, fonts and layout. 
+          You can add more flair with images, videos, shapes and gradient colors.
+        </p>
+      </div>
+
+      <!-- Step 4 -->
+      <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 col-sm-12">
+        <div class="icon-circle">
+          <i class="fas fa-cloud-upload-alt bg-primary text-white fw-bold p-3 rounded-circle"></i>
+        </div>
+        <h5 class="fw-bold mt-3">Publish your website</h5>
+        <p class="text-muted fs-6 fw-medium">
+          When you’re finished crafting the perfect website, you can publish your website for the world 
+          to see. You’ll get a unique URL which you can promote on business cards, social media and more.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="bg-dark">
+
+<div class="container">
+  <div class="row">
+    <div class="colxxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 text-white text-center">
+      <h2 class="fw-bold mt-5">Get started with Design.com's website builder</h2>
+      <p class="small fw-medium fs-6 mt-2">Enter your business name and we'll start creating websites in seconds...</p>
+      <div class="my-5 mt-4 d-flex justify-content-center align-items-center">
+        <div class="input-container w-7 d-flex flex-column flex-sm-row gap-2">
+          <input pInputText type="text" placeholder="Enter Your Business Name"
+            class="business-input fw-medium text-gray-100 p-3 w-100" />
+          <button pButton label="Start Now" class="start-btn btn btn-primary fw-bold small">Generate Website</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+  
 
