--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -298,6 +298,12 @@ img:hover {
 .testimonial-1{
     width: 100%;
 }
+li{
+    margin-left: 20px;
+}
+h5{
+    margin-left: 20px;
+}
 }
 @media (max-width:1000px) {
     .image {
@@ -454,5 +460,120 @@ img:hover {
     text-decoration: underline;
   }
   
+ 
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    z-index: 1000;
+  }
+  
+  .mobile-menu-content {
+    width: 100%;
+    max-width: 100%;
+    /* background: white; */
+    padding: 20px;
+    border-radius: 5px;
+    /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); */
+    height: 400px;
+  }
+  
+
+
+/* Navbar */
+.navbar {
+    background: #333;
+    color: white;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1000;
+    position: relative;
+  }
+  
+  /* Menu Icon */
+  .menu-icon {
+    font-size: 24px;
+    cursor: pointer;
+  }
+  
+  /* Dropdown Menu */
+  .menu-container {
+    position: absolute;
+    /* top: 50px; */
+    /* right: 0; */
+    width: 80%;
+    height: 100vh;
+    background: white;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    z-index: 100;
+  }
+  
+  /* Menu Header */
+  .menu-header {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  /* Menu List */
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  /* li {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    cursor: pointer;
+  } */
+  
+  li span {
+    float: right;
+  }
+  
+  button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+
+ .design-1{
+    font-size: 30px;
+  }
+  /* a{
+    font-size: 14px;
+    padding: 50px;
+  } */
+  
+
   
 }
