--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -749,8 +749,8 @@
   <div class="container-fluid">
       <div class="row">
           <!-- Column 1 -->
-          <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-12 ccol-sm-12">
-              <h5 class="ml-4 fs-6 small">Design.com</h5>
+          <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-12 col-sm-12">
+              <h5 class=" fs-6 small">Design.com</h5>
               <ul class="list-unstyled">
                   <li class="py-1"><a href="#" class="text-white text-decoration-none">Logo Maker</a></li>
                   <li class="py-1"><a href="#" class="text-white text-decoration-none">Logo Templates</a></li>
